deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: kooobernettes
  name: kooobernettes
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kooobernettes
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: kooobernettes
    spec:
      containers:
      # - envFrom:
      #   - configMapRef:
      #       name: my-awesome-configmap
      #   - secretRef:
      #       name: my-awesome-secret
      - image: gothenburg/kooobernettes:latest
        imagePullPolicy: IfNotPresent
        name: kooobernettes
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
      # imagePullSecrets:
      # - name: regcred
      nodeSelector:
        pool: app
      restartPolicy: Always
